@@ -1,3 +1,8 @@
+2012-07-23  Albert Chu <chu11@llnl.gov>
+
+	* ipmi-oem/ipmi-oem-intelnm.c: Use
+	_ipmi_oem_intelnm_bad_completion_code in additional situation.
+
 2012-07-19  Albert Chu <chu11@llnl.gov>
 
 	* ipmi-oem/: Fix and support Wistron set-password-policy.
